# openobserve-test-automation

./: .env  .env.example  .gitattributes  .gitignore  README.md  TESTING_GUIDELINES.md  TEST_CASES.md  TEST_REPORT.md  pyproject.toml  pytest.ini  requirements.txt  run_suites.py  test_runner.py
resources/testdata/: rfq_test_data.py
src/main/aquanow/utils/: assertions.py  auth.py  base_test.py  client.py  config.py  helper.py  rfq_helpers.py  utils.py
src/main/openobserve/api_tests/: conftest.py  pytest.ini  requirements.txt
src/main/openobserve/api_tests/tests/: test_ingestion_logs.py
src/main/openobserve/api_tests/utils/: assertions.py  client.py
src/main/openobserve/ui-tests/: package-lock.json  package.json  playwright.config.js
src/main/openobserve/ui-tests/fixtures/: test-options.js
src/main/openobserve/ui-tests/helpers/: api.helper.js  test-data.helper.js
src/main/openobserve/ui-tests/pages/: alerts.page.js  dashboards.page.js  destination.page.js  login.page.js  pipelines.page.js  template.page.js
src/main/openobserve/ui-tests/tests/: createalert.spec.js  dashboard.spec.js  pipeline.spec.js
src/main/openobserve/ui-tests/utils/: actions.js  test-logger.js
src/test/aquanow/tests/: conftest.py  test_rfq_auth.py  test_rfq_execute.py  test_rfq_expire.py  test_rfq_quote.py
